# simpled

./: .gitignore  Cargo.toml  Readme.md
.claude/: settings.local.json
.github/workflows/: release.yml
.run/: Run.run.xml
docs/: cicd.md  examples.md  reference.md  tutorial.md
src/: app_bundle.rs  docker_compose.rs  docker_generator.rs  env_loader.rs  k8s_generator.rs  local_ingress.rs  main.rs  resolved_spec.rs  resolver.rs  run_local.rs  spec.rs  spec_loader.rs  spec_yaml.rs  transform.rs  updater.rs  validator.rs
src/bundle_repo/: gh_release.rs  mod.rs
src/transform/: app.rs  env.rs  mod.rs
